zero-trust-gitops-platform/policies/tests/drop-all-capabilities/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: drop-all-capabilities-test
policies:
  - ../../workload-hardening/drop-all-capabilities.yaml
resources:
  - resource-pass.yaml
  - resource-fail.yaml
results:
  - policy: drop-all-capabilities
    rule: check-drop-all
    resources:
      - compliant-pod
    kind: Pod
    result: pass
  - policy: drop-all-capabilities
    rule: check-drop-all
    resources:
      - noncompliant-pod
    kind: Pod
    result: fail
